--- a/Emprendimientos.css
+++ b/Emprendimientos.css
@@ -10,7 +10,7 @@ body {
 }
 
 .head_content {
-    background-color: #1D72A7;
+    background-color: #1398E8;
     height: 80px;
     width: 100%;
     position: sticky;
@@ -52,7 +52,7 @@ body {
     width: 100%;
     align-content: center;
     display: flex;
-    margin-top: 6px;
+    background-color: transparent;
 
 }
 
@@ -95,7 +95,6 @@ body {
     width: 400px;
     height: 300px;
     overflow: hidden;
-    margin-left: 40px;
     margin-top: 40px;
     border-radius: 10px;
     box-shadow: 0 0 10px rgba(0, 0, 0, 0.2);
@@ -162,6 +161,7 @@ body {
     margin-left: 800px;
     align-content: center;
     justify-content: center;
+    opacity: 0;
 }
 
 
@@ -181,10 +181,10 @@ body {
     margin-top: 30px;
     border-radius: 20px;
     box-shadow: 0px 0px 16px -5px black;
-    padding: 60px;
+    padding: 20px;
 }
 
-.business_tittle {
+.business_title {
     background-color: rgba(167, 167, 167, 0.3);
     border-radius: 5px;
     height: 100px;
@@ -244,24 +244,27 @@ body {
 
 .products {
     height: 250px;
-    width: 350px;
+    width: 380px;
     background-color: rgba(167, 167, 167, 0.3);
     margin-left: 30px;
-}
-
-.products {
     grid-column: 3;
     border-radius: 10px;
     padding: 15px;
     display: flex;
 }
 
+.products_title {
+    text-align: center;
+    height: fit-content;
+    padding: 7px;
+    margin-top: 50px;
+    margin-left: 12px;
+}
 
 .product_img {
     width: 200px;
     height: 150px;
     display: flex;
-    margin-left: 25px;
-    border-radius: 15px;
-
+    border-radius: 10px;
+    margin-left: 30px;
 }
