--- a/Emprendimientos/Emprendimientos.css
+++ b/Emprendimientos/Emprendimientos.css
@@ -360,9 +360,18 @@ body {
 }*/
 
 
-footer {
-    background-color: #1d72a7;
-    height: 300px;
-    margin-top: 100px;
-    padding: 30px;
+.footer-principal {
+    background-color: #1D72A7;
+    color: white;
+    text-align: center;
+    padding: 30px 0;
+    font-family: 'Montserrat', sans-serif;
+    font-size: 14px;
+    margin-top: auto;
+    width: 100%;
+}
+
+.texto-footer {
+    margin: 0;
+    color: white;
 }
