--- a/Inicio/inicio.css
+++ b/Inicio/inicio.css
@@ -154,14 +154,39 @@ main {
 }
 
 .footer-principal {
-    background-color: #1D72A7;
-    color: white;
-    font-family: 'Montserrat', sans-serif;
-    font-size: 14px;
-    font-weight: 400;
-    text-align: center;
-    padding: 15px;
-    margin-top: 0; /* Aseguramos que no haya margen superior en el footer */
+  background-color: #1D72A7;
+  color: white;
+  font-size: 13.5px;
+  padding: 6px 10px;
+  width: 100%;
+}
+
+.footer-contenido {
+  max-width: 1000px;
+  margin: 0 auto;
+  text-align: center;
+  line-height: 1.3;
+}
+
+.footer-info p,
+.footer-creditos p {
+  margin: 0;
+}
+
+.footer-titulo {
+  font-size: 15px;
+  font-weight: 700;
+  margin-bottom: 2px;
+}
+
+.footer-principal a {
+  text-decoration: none;
+}
+
+.footer-creditos a img.logo-creador {
+  max-width: 90px;
+  height: auto;
+  margin-top: 2px;
 }
 
 h2 {
