--- a/Mapa/mapa.css
+++ b/Mapa/mapa.css
@@ -85,14 +85,37 @@ body, html {
 .footer-principal {
   background-color: #1D72A7;
   color: white;
-  text-align: center;
-  padding: 15px 0;
-  font-size: 14px;
+  font-size: 13.5px;
+  padding: 6px 10px;
   width: 100%;
 }
 
-.texto-footer {
+.footer-contenido {
+  max-width: 1000px;
+  margin: 0 auto;
+  text-align: center;
+  line-height: 1.3;
+}
+
+.footer-info p,
+.footer-creditos p {
   margin: 0;
+}
+
+.footer-titulo {
+  font-size: 15px;
+  font-weight: 700;
+  margin-bottom: 2px;
+}
+
+.footer-principal a {
+  text-decoration: none;
+}
+
+.footer-creditos a img.logo-creador {
+  max-width: 90px;
+  height: auto;
+  margin-top: 2px;
 }
 
 /* ------------------------ */
